--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "laravel/framework": "5.2.*",
         "barryvdh/laravel-debugbar": "^2.1",
         "predis/predis": "^1.0",
-        "greggilbert/recaptcha": "^2.1"
+        "greggilbert/recaptcha": "^2.1",
         "barryvdh/laravel-ide-helper": "^2.1"
     },
     "require-dev": {
