--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "predis/predis": "^1.0",
         "greggilbert/recaptcha": "^2.1",
         "barryvdh/laravel-ide-helper": "^2.1",
-        "barryvdh/laravel-translation-manager": "dev-master"
+        "barryvdh/laravel-translation-manager": "dev-master",
+        "intervention/image": "^2.3",
+        "graham-campbell/htmlmin": "^4.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
