--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "barryvdh/laravel-ide-helper": "^2.1",
         "barryvdh/laravel-translation-manager": "dev-master",
         "intervention/image": "^2.3",
-        "graham-campbell/htmlmin": "^4.2"
+        "graham-campbell/htmlmin": "^4.2",
+        "shpasser/gae-support-l5": "^1.4"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
